# 32_OmniMetric-

./: .env.example  .gitignore  .pdca.json  CHANGELOG.md  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  prd.md  pyproject.toml  requirements-minimal.txt  requirements.txt  run_simple_test.py
.bkit/: agent-state.json
.claude/: CLAUDE.md
.claude/agent-memory/bkit-cto-lead/: MEMORY.md  project_omnimetric_status.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml
app/: main.py
app/api/v1/: __init__.py  dependencies.py
app/core/: config.py  engine.py  evaluator.py  parallel.py  preprocessor.py  storage.py
app/models/: schemas.py
app/models/algorithms/: base.py  registry.py
app/security/: __init__.py  input_validator.py  rate_limiter.py  ssrf_guard.py
app/services/: __init__.py  actions.py  ai_qa.py  connector.py  eda.py  feature_engineering.py  mlops.py  nlg.py  optimizer.py  simulator.py  webhook.py  whatdata.py  xai.py
docs/: .pdca-status.json  b2b-integration-prompt.md
docs/01-plan/: requirements.md
docs/01-plan/features/: omnimetric-frontend.plan.md  xaisimtier-completion.plan.md
docs/02-design/features/: omnimetric-frontend.design.md  xaisimtier-completion.design.md
docs/03-analysis/: omnimetric.analysis.md
docs/archive/2026-03/: _INDEX.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/actions/: page.tsx
frontend/app/analyze/: page.tsx
frontend/app/connectors/: page.tsx
frontend/lib/: api.ts  types.ts
tests/: test_benchmark.py  test_integration.py  test_regression.py
(+32 files in other folders)
